resolve feature_orders merge conflict
