# sandsack-management-backend/docs/swagger.yaml
@@ -8,12 +8,16 @@ definitions:
     type: object
   models.Comment:
     properties:
+      branch_name:
+        type: string
       comment_text:
         type: string
       create_date:
         type: string
       id:
         type: integer
+      name:
+        type: string
       order_id:
         type: integer
       update_date:
@@ -21,10 +25,13 @@ definitions:
     type: object
   models.CommentInput:
     properties:
-      comments:
-        items:
-          type: string
-        type: array
+      comment:
+        type: string
+      order_id:
+        type: integer
+    type: object
+  models.ConfirmDeliveryInput:
+    properties:
       order_id:
         type: integer
     type: object
@@ -32,10 +39,8 @@ definitions:
     properties:
       address_to:
         type: string
-      comments:
-        items:
-          $ref: '#/definitions/models.Comment'
-        type: array
+      comment:
+        type: string
       equipments:
         items:
           $ref: '#/definitions/models.OrderEquipment'
@@ -160,6 +165,15 @@ definitions:
       name:
         type: string
     type: object
+  models.Priority:
+    properties:
+      id:
+        type: integer
+      level:
+        type: integer
+      name:
+        type: string
+    type: object
   models.RecoveryPasswordInput:
     properties:
       otp:
@@ -234,31 +248,220 @@ definitions:
 info:
   contact: {}
 paths:
-  /create_user/:
+  /core/equipment:
+    get:
+      consumes:
+      - application/json
+      description: GetEquipment - array of equipment and current quantity of it in
+        Mollnhof
+      parameters:
+      - description: 'Bearer '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.OrderEquipment'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: GetEquipment - array of equipment and current quantity of it in Mollnhof
+      tags:
+      - Core
     post:
       consumes:
       - application/json
-      description: This endpoint is implemented to register new user by Einsatzleiter
-        and get a new token pair
+      description: Admin can add new type of equipment
       parameters:
-      - description: User registration model
+      - description: 'Bearer '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Needed only name and quantity of new equipment
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/models.CreateUser'
+          $ref: '#/definitions/models.OrderEquipment'
       produces:
       - application/json
       responses:
-        "201":
-          description: User has been created
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.OrderEquipment'
+            type: array
         "400":
-          description: Bad request (e.g. parameter in body is not given or incorrect)
-        "401":
-          description: Permission to create the user is not given
-      summary: Create a new user (branch) in the system
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "505":
+          description: HTTP Version Not Supported
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Admin can add new type of equipment
       tags:
-      - Admin
+      - Core
+  /core/equipment/add:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint adds new equipment
+      parameters:
+      - description: 'Bearer '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: name, quantity
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.OrderEquipment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.OrderEquipment'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: This endpoint adds new equipment
+      tags:
+      - Core
+  /core/equipment/return:
+    patch:
+      consumes:
+      - application/json
+      description: This endpoint increase the quantity of chosen equipment
+      parameters:
+      - description: 'Bearer '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: equipment_id, quantity
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.OrderEquipment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.OrderEquipment'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: This endpoint increase the quantity of chosen equipment
+      tags:
+      - Core
+  /core/priority:
+    get:
+      consumes:
+      - application/json
+      description: GetPriority - array of priorities in system
+      parameters:
+      - description: 'Bearer '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Priority'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: GetPriority - array of priorities in system
+      tags:
+      - Core
+  /core/priority/add:
+    post:
+      consumes:
+      - application/json
+      description: This endpoint adds new priority
+      parameters:
+      - description: 'Bearer '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: level, name
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.Priority'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Priority'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: This endpoint adds new priority
+      tags:
+      - Core
   /email_verification:
     post:
       consumes:
@@ -473,6 +676,43 @@ paths:
       summary: CommentOrder - user can write comments for the order
       tags:
       - Order
+  /order/delivery/confirm/:
+    post:
+      consumes:
+      - application/json
+      description: Unterabschnitt confirms that equipment is successfully delivered
+      parameters:
+      - description: 'Bearer '
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: ConfirmDelivery
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/models.ConfirmDeliveryInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Unterabschnitt confirms that equipment is successfully delivered
+      tags:
+      - Order
   /order/equipment:
     get:
       consumes:
@@ -514,11 +754,6 @@ paths:
       description: This endpoint is implemented to register new user by Einsatzleiter
         and get a new token pair
       parameters:
-      - description: 'Bearer '
-        in: header
-        name: Authorization
-        required: true
-        type: string
       - description: User registration model
         in: body
         name: input
